<resources>
    <string name="app_name">FirebaseTest</string>
    <string name="btnRegister">Register</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="entrar">Entrar</string>
    <string name="login_senha">Senha</string>
    <string name="login_email">Email</string>
    <string name="criar_conta">Criar conta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_users">All Users</string>
    <string name="configura_es">Configurações</string>
</resources>
